--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //noinspection GradleCompatible
-    implementation 'com.android.support:recyclerview-v7:24.2.1'
+    implementation 'com.android.support:recyclerview-v7:1.0.0'
+    implementation "androidx.cardview:cardview:1.0.0"
+
 }
